# flatland-workshop-2024

./: LICENSE  README.md
_backlog/flatland-baselines/: README.md
benchmarking-scenarios/: README.md
complex-schedules-using-netzgrafikeditor/: README.md
graph-something/: README.md
human-in-the-loop/: README.md
interactive-user-interface-design/: README.md
next-flatland/: README.md  environment.yml  gen_env.py  pyproject.toml  rail_prototyp.py  scenario.py  workshop_documentation.md
next-flatland/documentation/: core_concept.md  workshop_documentation.md
next-flatland/example/: mock_states.py  rail_network.py
next-flatland/network/abc/: link.py  mutablenetwork.py  node.py
next-flatland/network/system_state/: link.py  network.py  node.py
next-flatland/next_flatland/network/abc/: __init__.py  debug.py  immutablenetwork_abc.py  link.py  mutablenetwork.py  node.py
next-flatland/next_flatland/network/state_network/: __init__.py  link.py  network.py  node.py  plot_3d.py
next-flatland/next_flatland/network/system_state/: __init__.py
next-flatland/next_flatland/plot/: __init__.py  colormap.py
next-flatland/next_flatland/utils/: result.py
next-graph-based-observation/: README.md
next-rail-env-generator/: README.md
real-world-infrastructures/: README.md
real-world-scenarios/: README.md
