[tool.poetry]
name = "next-flatland"
version = "0.1.0"
description = ""
authors = ["Thomas Dubach <thomas.dubach@ivt.baug.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.24.1"
igraph = "^0.11.8"
pandas = "^2.2.3"
pycairo = "1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
