[tool.poetry]
name = "next-flatland"
version = "0.1.0"
description = ""
authors = ["Thomas Dubach <thomas.dubach@ivt.baug.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
ugraph = { version = "^0.0.421", extras = ["plotting"] }

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
